--- a/Games/MathGame.xaml
+++ b/Games/MathGame.xaml
@@ -5,6 +5,7 @@
     <Grid>
         <StackPanel Margin="20">
             <TextBlock x:Name="TimerText" FontSize="18" HorizontalAlignment="Center" Margin="0,10"/>
+            <TextBlock x:Name="LivesText" FontSize="18" HorizontalAlignment="Center" Margin="0,10"/>
             <TextBlock x:Name="ProblemText" FontSize="24" HorizontalAlignment="Center" Margin="0,20"/>
             <TextBox x:Name="AnswerInput" FontSize="18" Margin="0,20" Padding="5"/>
             <Button x:Name="SubmitButton" Content="Submit Answer" Click="SubmitAnswer_Click" Margin="0,10"/>
