--- a/Games/TriviaGame.xaml
+++ b/Games/TriviaGame.xaml
@@ -4,6 +4,8 @@
         Title="Trivia Game" Height="450" Width="800">
     <Grid>
         <StackPanel Margin="20">
+            <TextBlock x:Name="TimerText" FontSize="18" HorizontalAlignment="Center" Margin="0,10"/>
+            <TextBlock x:Name="LivesText" FontSize="18" HorizontalAlignment="Center" Margin="0,10"/>
             <TextBlock x:Name="QuestionText" FontSize="24" TextWrapping="Wrap" Margin="0,20"/>
             <TextBlock x:Name="HintText" FontSize="16" HorizontalAlignment="Center" Margin="0,10"/>
             <Button x:Name="Answer1" Content="" Click="Answer_Click" Margin="0,5"/>
