--- a/Games/WordScrambleGame.xaml
+++ b/Games/WordScrambleGame.xaml
@@ -5,6 +5,7 @@
     <Grid>
         <StackPanel Margin="20">
             <TextBlock x:Name="TimerText" FontSize="18" HorizontalAlignment="Center" Margin="0,10"/>
+            <TextBlock x:Name="LivesText" FontSize="18" HorizontalAlignment="Center" Margin="0,10"/>
             <TextBlock x:Name="ScrambledWordText" FontSize="24" HorizontalAlignment="Center" Margin="0,20"/>
             <TextBlock x:Name="HintText" FontSize="16" HorizontalAlignment="Center" Margin="0,10"/>
             <TextBox x:Name="AnswerInput" FontSize="18" Margin="0,20" Padding="5"/>
